# geogen-algorithms

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  codecov.yml  geogen-algorithms.code-workspace  pyproject.toml  requirements.in  requirements.txt  setup.cfg  whitelist.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-style.yml  draft-release.yml  release.yml  tests.yml
.github/workflows/draft-release/: extract-changes.py  set-version-post0.py  set-version.py
src/geogenalg/: __init__.py  analyze.py  attributes.py  cluster.py  continuity.py  displacement.py  exaggeration.py  identity.py  main.py  merge.py  selection.py  split.py  testing.py  transform.py
src/geogenalg/application/: __init__.py  boulders_in_water.py  detect_watercourse_areas_border.py  detect_with_uoma_overlap.py  dissolve_polygons.py  generalize_building_areas.py  generalize_building_areas_by_geometry.py  generalize_building_areas_by_parcel.py  generalize_buildings.py  generalize_cliffs.py  generalize_clusters_to_centroids.py  generalize_conservation_areas.py  generalize_fences.py  generalize_lakes.py  generalize_landcover.py  generalize_points.py  generalize_polygons_to_points.py  generalize_power_lines.py  generalize_roads.py  generalize_roads_50k.py  generalize_rocks_to_clusters.py  generalize_seas.py  generalize_shared_paths.py  generalize_shoreline.py  generalize_water_areas.py  generalize_watercourse_areas.py  generalize_watercourses_50k.py  keep_intersection.py  lakes_to_shoreline.py  railroads.py  remove_dense_watercourses.py  remove_overlap.py  remove_short_watercourses.py  watercourse_areas.py
src/geogenalg/buffer/: exaggerate_thin_parts.py  generalize_islands.py
src/geogenalg/core/: exceptions.py  extract_interior_rings.py  geometry.py  watercourse_structure_detection.py
src/geogenalg/simplify/: __init__.py
src/geogenalg/utility/: dataframe_processing.py  fix_geometries.py  hash.py  validation.py
test/: check_temp_files.py  conftest.py  test_analyze.py  test_attributes.py  test_cluster.py  test_continuity.py  test_displacement.py  test_exaggeration.py  test_group_intersecting_rows.py  test_identity.py  test_main.py  test_merge.py  test_placeholder.py  test_selection.py  test_split.py  test_testing.py  test_transform.py  test_validation.py
test/application/: test_base_algorithm.py  test_boulders_in_water.py  test_dissolve_polygons.py  test_generalize_building_areas.py  test_generalize_building_areas_by_geometry.py  test_generalize_building_areas_by_parcel.py  test_generalize_buildings.py  test_generalize_cliffs.py  test_generalize_clusters_to_centroids.py  test_generalize_conservation_areas.py  test_generalize_fences.py  test_generalize_landcover.py  test_generalize_points.py  test_generalize_polygons_to_points.py  test_generalize_power_lines.py  test_generalize_roads.py  test_generalize_shared_paths.py  test_generalize_shoreline.py  test_generalize_water_areas.py  test_generalize_watercourse_areas.py  test_keep_intersection.py  test_lakes_to_shoreline.py  test_remove_overlap.py  test_rocks_to_clusters.py  test_shared_paths.py
test/core/: test_geometry.py
test/test_utility/: __init__.py  test_dataframe_processing.py  test_fix_geometries.py  test_hash.py  test_validation.py
test/testdata/: LICENSE.md  boulder_in_water.gpkg  boulders_in_water.gpkg  boulders_in_water_10k.gpkg  boulders_in_water_mixed.gpkg  boulders_in_water_no_land.gpkg  building_areas.gpkg  building_areas_by_geometry.gpkg  building_areas_by_parcel.gpkg  buildings.gpkg  buildings_generalized_100k_helsinki.gpkg  buildings_generalized_50k_helsinki.gpkg  buildings_helsinki.gpkg  cliffs.gpkg  clusters_to_centroids.gpkg  dissolve_polygons.gpkg  fences.gpkg  fences_rovaniemi.gpkg  fences_small_area.gpkg  keep_intersection.gpkg  lakes_to_shoreline.gpkg  marshes_small_area.gpkg  marshes_small_area_v2.gpkg  path_network.gpkg  points.gpkg  polygons_to_points.gpkg  power_lines.gpkg  properties_helsinki.gpkg  read_gdf.gpkg  remove_overlap.gpkg  road_network.gpkg  roads.gpkg  sea.gpkg  watercourse_areas.gpkg
tools/pre-commit/: check_temp_files.py
tools/tests/: write_layer.py
