[tool.ruff]
target-version = "py312"
line-length = 88

lint.ignore = [
    "FIX",   # flake8-fixme
    "TD002", # Missing author in TODO
    "D104",  # Missing docstring in public package
    "D100",  # Missing docstring in public module
    # Conflicting rules (formatter)
    "D203",   # one-blank-line-before-class, D211 used (no-blank-line-before-class)
    "D213",   # multi-line-summary-second-line, D212 used (multi-line-summary-first-line)
    "COM812", # missing-trailing-comma (formatter will enforce this)
    "ISC001", # single-line-implicit-string-concatenation
]

# List of all rules https://docs.astral.sh/ruff/rules/
lint.select = ["ALL"]

# Avoid flagging (and removing) `SC200` from any `# noqa`
# directives, despite Ruff's lack of support for `flake8-spellcheck`.
lint.external = ["SC200"]

lint.unfixable = [
    "F401", # Unused imports
]
extend-exclude = ["setup.py"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.aliases]
pandas = "pd"
geopandas = "gpd"

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "INP001",  # implicit-namespace-package
    "D",       # pydocstyle
    "DTZ",     # flake8-datetimez
    "FBT",     # flake8-boolean-trap
    "TD",      # flake8-todos
    "S",       # flake8-bandit
    "SLF",     # flake8-self
    "ANN201",  # Missing return type annotation for public function
    "E501",    # Line too long
    "PLR2004", # Magic value used in comparison, consider replacing `2000` with a constant variable
    "PLR0913", # Too many arguments in function definition
    "ARG001",  # Unused function argument
]

".github/*" = [
    "D",       # pydocstyle
    "CPY",       # Missing copyright notice at top of file
    "INP001",     # implicit-namespace-package
]

[tool.flake8]
spellcheck-targets = "names"
dictionaries = "en_US,python,technical"
select = ["SC"]
per-file-ignores = ["test/*:SC200"]

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "geopandas"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
