[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geogenalg"
requires-python = ">=3.11"
authors = [
    { name = "National Land Survey of Finland", email = "os@nls.fi" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
description = "A Python library to perform cartogaphic generalizations."
keywords = [
    "gis",
    "cartography",
    "generalization",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "cartagen>=1.0.2",
    "geopandas==1.0.1",
    "matplotlib==3.9.2",
    "networkx==3.4.2",
    "pygeoops==0.4.0",
    "scikit-learn==1.6.1",
    "shapely==2.0.6",
    "shapelysmooth==0.2.1",
    "simplification==0.7.13",
]

[project.urls]
Homepage = "https://github.com/nlsfi/geogen-algorithms"
Changelog = "https://github.com/nlsfi/geogen-algorithms/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
geogenalg = [
    "py.typed",
]

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[tool.setuptools.dynamic]
version = { attr = "geogenalg.__version__" }

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.14.1",
    "pytest-rerunfailures>=15.1",
    "pytest-subtests>=0.14.2",
    "pytest-timeout>=2.4.0",
]
lint = [
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.3",
    "flake8-spellcheck>=0.28.0",
    "mypy>=1.16.1",
    "pandas-stubs==2.2.3.241126",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
# TODO: remove exclude section when qgis dependencies removed/function refactored
exclude = [
    "src/geogenalg/application/generalize_lakes.py",
    "src/geogenalg/application/generalize_seas.py",
    "src/geogenalg/buffer/exaggerate_thin_parts.py",
    "src/geogenalg/buffer/generalize_islands.py",
    "src/geogenalg/core/extract_interior_rings.py",
    "src/geogenalg/application/remove_short_watercourses.py",
    "src/geogenalg/application/remove_dense_watercourses.py",
    "src/geogenalg/application/generalize_watercourses_50k.py",
    "src/geogenalg/application/detect_with_uoma_overlap.py",
    "src/geogenalg/application/detect_watercourse_areas_border.py",
    "src/geogenalg/core/watercourse_structure_detection.py",
    "src/geogenalg/application/railroads.py",
    "src/geogenalg/application/generalize_roads_50k.py",
]

lint.ignore = [
    "FIX",   # flake8-fixme
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link for this TODO
    "D104",  # Missing docstring in public package
    "D100",  # Missing docstring in public module
    # Conflicting rules (formatter)
    "D203",   # one-blank-line-before-class, D211 used (no-blank-line-before-class)
    "D213",   # multi-line-summary-second-line, D212 used (multi-line-summary-first-line)
    "COM812", # missing-trailing-comma (formatter will enforce this)
    "ISC001", # single-line-implicit-string-concatenation
]

# List of all rules https://docs.astral.sh/ruff/rules/
lint.select = ["ALL"]

# Avoid flagging (and removing) `SC200` from any `# noqa`
# directives, despite Ruff's lack of support for `flake8-spellcheck`.
lint.external = ["SC200"]

lint.unfixable = [
    "F401", # Unused imports
]
extend-exclude = ["setup.py"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.lint.flake8-import-conventions]
[tool.ruff.lint.flake8-import-conventions.aliases]
pandas = "pd"
geopandas = "gpd"

[tool.ruff.lint.per-file-ignores]
"src/geogenalg/core/exceptions.py" = [
    "D101", # Missing docstring in public class
]
"test/*" = [
    "INP001",  # implicit-namespace-package
    "D",       # pydocstyle
    "DTZ",     # flake8-datetimez
    "FBT",     # flake8-boolean-trap
    "TD",      # flake8-todos
    "S",       # flake8-bandit
    "SLF",     # flake8-self
    "ANN201",  # Missing return type annotation for public function
    "E501",    # Line too long
    "PLR2004", # Magic value used in comparison, consider replacing `2000` with a constant variable
    "PLR0913", # Too many arguments in function definition
    "ARG001",  # Unused function argument
    "PLC2701",
]

".github/*" = [
    "D",       # pydocstyle
    "CPY",       # Missing copyright notice at top of file
    "INP001",     # implicit-namespace-package
]

[tool.flake8]
spellcheck-targets = "names"
dictionaries = "en_US,python,technical,pandas"
select = ["SC"]
per-file-ignores = ["test/*:SC200"]
# TODO: remove exclude section when qgis dependencies removed/function refactored
exclude = """
    src/geogenalg/application/generalize_lakes.py
    src/geogenalg/application/generalize_seas.py
    src/geogenalg/buffer/exaggerate_thin_parts.py
    src/geogenalg/buffer/generalize_islands.py
    src/geogenalg/core/extract_interior_rings.py
    src/geogenalg/application/remove_short_watercourses.py
    src/geogenalg/application/remove_dense_watercourses.py
    src/geogenalg/application/generalize_watercourses_50k.py
    src/geogenalg/application/detect_with_uoma_overlap.py
    src/geogenalg/application/detect_watercourse_areas_border.py
    src/geogenalg/core/watercourse_structure_detection.py
    # railroads is not qgis dependent, but has lots of ambiguous variable names etc
    src/geogenalg/application/railroads.py
"""

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "geopandas,geopandas.testing,sklearn"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]

[tool.coverage.paths]
source = ["src", "**/site-packages"]

[tool.coverage.run]
branch = true
source_pkgs = ["geogenalg"]
# TODO: remove omit section when qgis dependencies removed/function refactored
omit = [
    "src/geogenalg/application/generalize_lakes.py",
    "src/geogenalg/application/generalize_seas.py",
    "src/geogenalg/buffer/exaggerate_thin_parts.py",
    "src/geogenalg/buffer/generalize_islands.py",
    "src/geogenalg/core/extract_interior_rings.py",
    "src/geogenalg/application/remove_short_watercourses.py",
    "src/geogenalg/application/remove_dense_watercourses.py",
    "src/geogenalg/application/generalize_watercourses_50k.py",
    "src/geogenalg/application/detect_with_uoma_overlap.py",
    "src/geogenalg/application/detect_watercourse_areas_border.py",
    "src/geogenalg/core/watercourse_structure_detection.py",
    "src/geogenalg/application/railroads.py",
    "src/geogenalg/application/generalize_roads_50k.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
