[metadata]
name = geogenalg
version = attr: geogenalg.__version__
url = https://github.com/nlsfi/geogen-algorithms
project_urls =
    Changelog = https://github.com/nlsfi/geogen-algorithms/blob/main/CHANGELOG.md
author = National Land Survey of Finland
author_email = os@nls.fi
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Typing :: Typed
license = MIT
description = A Python library to perform cartogaphic generalizations.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords =
    gis, cartography, generalization

[options]
packages = find:
package_dir =
    = src
install_requires =

[options.packages.find]
where = src

[options.package_data]
geogenalg =
    py.typed
